--- a/frontend/src/app/components/upgrade/upgrade.component.css
+++ b/frontend/src/app/components/upgrade/upgrade.component.css
@@ -24,7 +24,7 @@
 } */
 
 .plans {
-	margin: 24px auto;
+	margin: var(--top-margin) auto;
 	width: clamp(300px, 90%, 840px);
 }
 
